--- a/package.json
+++ b/package.json
@@ -10,8 +10,17 @@
     "postinstall": "nuxt prepare"
   },
   "devDependencies": {
+    "@antfu/eslint-config": "^1.0.0",
+    "@nuxtjs/eslint-module": "4.1.0",
     "@unocss/nuxt": "latest",
     "@unocss/reset": "latest",
-    "nuxt": "3.8.0"
+    "eslint": "8.52.0",
+    "nuxt": "3.8.0",
+    "typescript": "5.2.2",
+    "vue-tsc": "1.8.22"
+  },
+  "dependencies": {
+    "@pinia/nuxt": "0.5.1",
+    "pinia": "^2.1.7"
   }
 }
