feat: More packages, webfonts

--- a/package.json
+++ b/package.json
@@ -15,11 +15,12 @@
   },
   "devDependencies": {
     "@antfu/eslint-config": "^1.0.0",
+    "@iconify-json/fa6-solid": "^1.1.15",
     "@unocss/eslint-config": "^0.57.1",
     "@unocss/nuxt": "latest",
     "@unocss/reset": "latest",
     "eslint": "8.52.0",
-    "nuxt": "3.8.0",
+    "nuxt": "^3.8.0",
     "typescript": "5.2.2",
     "vue-tsc": "1.8.22"
   }
