--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -1,5 +1,8 @@
 {
-    "recommendations": [
-        "simonhe.to-unocss"
-    ]
+  "recommendations": [
+    "simonhe.to-unocss",
+    "vue.volar",
+    "antfu.unocss",
+    "dbaeumer.vscode-eslint"
+  ]
 }
